--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,14 +18,14 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
         
+    - name: Install test tools
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest
+        
     - name: Install package
       run: |
         pip install -e .
-        
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install flake8 pytest
         
     - name: Test with pytest
       run: |
