--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ tqdm
 sklearn
 statsmodels
 pyyaml
-pybids~=0.13.0 # pinned until https://github.com/bids-standard/pybids/pull/791 is fixed
+pybids
 scikit-image
 transforms3d~=0.3.1
 pandas-schema
