--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,26 +13,26 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10']
+        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11']
       fail-fast: false
-        
+
     steps:
     - uses: actions/checkout@v3
-    
+
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v3
       with:
         python-version: ${{ matrix.python-version }}
-        
+
     - name: Install test tools
       run: |
         python -m pip install --upgrade pip
         pip install pytest
-        
+
     - name: Install package
       run: |
         pip install -e .
-        
+
     - name: Test with pytest
       run: |
         pytest
